--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=28081
 
-spring.datasource.url=jdbc:mysql://localhost:3307/about_us
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://db:3306/about_us
+spring.datasource.username=root1
+spring.datasource.password=root1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
