--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,10 @@ server.port=28081
 spring.datasource.url=jdbc:mysql://db:3306/about_us
 spring.datasource.username=root1
 spring.datasource.password=root1
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.liquibase.change-log=classpath:liquibase/changelog.sql
