--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       MYSQL_PASSWORD: 'root1'
       MYSQL_ROOT_PASSWORD: 'root'
     volumes:
-      - 'db_data:/var/lib/mysql'
+      - 'db_data:/var/lib/mysqlDocker'
     ports:
       - '3307:3306'
     networks:
